welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:30: error: Missing closing brace `}' assumed here
} 
^